MDEV-20257 Fix crash in Grant_table_base::init_read_record

The bug shows up when a 10.4+ server starts on a <10.4 datadir
with a crashed mysql.user table.
Grant_tables::open_and_lock tries to open the list of requested
tables (host, db, global_priv,..) and because global_priv doesn't
exist (pre-10.4 datadir), it falls back to opening mysql.user.
The first open_tables call for [host, db, global_priv,..] works
just fine. The second open_tables call (trying to open mysql.user
alone) sees the crashed user table and performs 3 steps:
- closes all the open tables
- attempts a table fix for mysql.user (succeeds)
- opens the tables initially passed as arguments
In an ideal world, the first step should only close the tables
passed as arguments (i.e. mysql.user), but for some reasons
close_tables_for_reopen makes a close_thread_tables call which
closes everything in THD::open_tables (nevertheless, this is
probably the intended behavior).
This side effect causes all the tables opened in the first
open_tables call to now be closed and Grant_table_base::init_read_record
tries to read from a released table.